--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <h1>Myrme is now Alias</h1>
     </header>
-    <p>The name Myrme was a bad 3am decision. I've now renamed the project to Alias. Please signed up at <a href="https://joinalias.com/">joinalias.com</a>.</p>
+    <p>Myrme is now Alias. Please signed up at <a href="https://joinalias.com/">joinalias.com</a>.</p>
   </article>
 </main>
 </body>
